# VaultKeeper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/: release.yml
.github/workflows/: container-build.yml  container-publish.yml  docker-hub-sync.yml  docker-publish.yml  test.yml
docs/: cli.md  development.md  multiuser-design.md  roadmap.md  web.md
tests/: conftest.py  test_backup.py  test_config_db.py  test_logging.py  test_server.py  test_setup_uri.py  test_users.py  test_vaults.py
vaultkeeper/: cli.py  client.py  logger.py
vaultkeeper/web/: app.py  audit.py  auth.py  backup.py  helpers.py  index.py  main.py  routes.py  users.py  vaults.py
vaultkeeper/web/static/: input.css  style.css
vaultkeeper/web/templates/: audit.html  backup_new.html  backup_restore.html  backup_upload.html  backups.html  base.html  dashboard.html  enroll.html  invitations.html  login.html  provision.html  settings.html  setup_uri.html  user_dashboard.html  user_detail.html  users.html  vault_detail.html  vaults.html
vaultkeeper/web/templates/_partials/: user_row.html
