[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultkeeper"
version = "0.1.0"
description = "Self-hosted Obsidian LiveSync backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "flask>=3.0",
]

[project.scripts]
cli              = "vaultkeeper.cli:cli"
vaultkeeper-web  = "vaultkeeper.web.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testcontainers>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vaultkeeper"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "requires_deno: tests that need Deno and generate_setupuri.ts - only pass inside the VaultKeeper container",
]
